data/derived/sp14/progs/unify/prog1874.ml.out
Characters 24-25:
  let _ = pipe [(fun x -> x ^ ", " ^ x); (fun x -> x ^ ", " ^ x ^ "!")] "corn";;
                          ^
Error: This expression has type 'a -> 'a
       but an expression was expected of type string
